# joshbot

./: .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 01-system-prompt-caching.md  02-model-centric-config.md  03-async-tools.md  04-mcp-integration.md  README.md  context-optimization.md  status-bugs.md
cmd/joshbot/: main.go  main_test.go
docs/: CONFIGURE_COMMAND_DESIGN.md  INSTALL.md  MEMORY.md  REVIEW.md
internal/agent/: agent.go  agent_test.go  context.go  context_test.go
internal/bus/: bus.go  bus_test.go  events.go
internal/channels/: channels_test.go  cli.go  telegram.go
internal/config/: config.go  config_model_test.go  config_test.go
internal/context/: context.go  context_test.go
internal/copilot/: auth.go  auth_test.go  provider.go  token_test.go
internal/cron/: cron.go  cron_test.go
internal/heartbeat/: heartbeat.go  heartbeat_test.go
internal/integration/: integration_test.go
internal/learning/: learning.go  learning_test.go  loop.go  loop_test.go
internal/log/: logger.go  logger_test.go
joshbot/: __init__.py  main.py
scripts/: install.sh  uninstall.sh  verify-local.sh
tasks/: qa_test_results.md  todo.md  update-command-plan.md
tests/: integration_test.go  test_markdown.py  test_outbound_messages.py
(+86 files in other folders)
